--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
         <p>HTML Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati rem eaque ab nulla cumque quas debitis! Consequatur totam minima earum illo quis.
          <br>
-         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, nam fugiat tenetur amet quibusdam blanditiis! Doloribus dolores eos at pariatur est facere perferendis cupiditate, minima nulla, quidem neque vel consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi sint. Eveniet consectetur quo quisquam culpa ipsam iste suscipit, molestiae nihil maxime ex libero dicta nulla? Repudiandae ab eum quae, natus, ipsum accusamus delectus veritatis dolore harum dolorem, quis laudantium saepe incidunt. Delectus aliquid doloribus repellendus et excepturi, facilis sapiente?   
+         Lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem in laborum obcaecati quia reprehenderit totam exercitationem modi optio unde veritatis? ipsum dolor, sit amet consectetur adipisicing elit.  
         </p>
     
     </div>
