--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <div class="foot-social">
         <a href="gracias.html" id="social-link_4" class="social_a"><i class="fab fa-github-square"></i></a>
-        <a href="#" id="social-link_3" class="social_a"><i class="fab fa-reddit-square"></i></a>
+        <a href="https://www.reddit.com/user/Kevin_Sanchez030329" id="social-link_3" class="social_a"><i class="fab fa-reddit-square"></i></a>
         <a href="#" id="social-link_2" class="social_a"><i class="fab fa-whatsapp-square"></i></a>
         <a href="#" id="social-link_1" class="social_a"><i class="fab fa-facebook-square"></i></a>
         </div>
