--- a/index.html
+++ b/index.html
@@ -108,28 +108,61 @@
 <section id="ofert_link">
 
 <div class="ofert">
-
     <h1>Lo que te puedo ofrecer</h1>
     <hr>
-
 <div class="conteiner-post">   
+    
+<div class="item-ofert">   
+        <article>
+            <img src="assets/img2.png" alt="foto1">
+            <h2>Desarrollo Web</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
+        </article>
+</div>
+
 <div class="item-ofert">
     <article>
-        <img src="assets/img2.jpg" alt="foto1">
-        <h2>Una pagina facil de usar, intuitiva y bonita </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
-    </article></div>
+        <img src="assets/img1.png" alt="foto1">
+        <h2>Diseño de pagina web </h2>
+        <p>Nuestro enfoque para el diseño de sitios web es crear un sitio web que fortalezca la marca de su empresa al tiempo que garantiza la facilidad de uso y la simplicidad para su audiencia</p>
+    </article>
+</div>
 
 <div class="item-ofert">   
     <article>
-        <img src="assets/img3.jpg" alt="foto1">
-        <h2>Lorem, ipsum.</h2>
+        <img src="assets/img3.png" alt="foto1">
+        <h2>Adaptable a diferentes dispositivos</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
-    </article></div>
+    </article>
+</div>
+
+<div class="item-ofert">   
+    <article>
+        <img src="assets/img3.png" alt="foto1">
+        <h2>Adaptable a diferentes dispositivos</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
+    </article>
+</div>
+
+<div class="item-ofert">   
+    <article>
+        <img src="assets/img3.png" alt="foto1">
+        <h2>Adaptable a diferentes dispositivos</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
+    </article>
+</div>
+
+<div class="item-ofert">   
+    <article>
+        <img src="assets/img3.png" alt="foto1">
+        <h2>Adaptable a diferentes dispositivos</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
+    </article>
 </div>
 
 </div>
 </div>
+
 </section>
 <!--/Servicio-->
 
