--- a/index.html
+++ b/index.html
@@ -108,56 +108,40 @@
 <section id="ofert_link">
 
 <div class="ofert">
-    <h1>Lo que te puedo ofrecer</h1>
+    <h1>Servicios</h1>
     <hr>
+
 <div class="conteiner-post">   
     
-<div class="item-ofert">   
-        <article>
-            <img src="assets/img2.png" alt="foto1">
+    <a><img class="back_img" id="back" src="assets/back.png" alt="back" ></a> 
+    <a><img class="next_img" id="next" src="assets/next.png" alt="next"></a>
+
+    <div class="slider_ofert" id="slider_ofert">
+
+<div class="item-ofert">
+        <img src="assets/img4.png" alt="foto1" class="img_ofert">
             <h2>Desarrollo Web</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
-        </article>
 </div>
 
 <div class="item-ofert">
-    <article>
-        <img src="assets/img1.png" alt="foto1">
+        <img src="assets/img1.png" alt="foto1" class="img_ofert">
         <h2>Diseño de pagina web </h2>
         <p>Nuestro enfoque para el diseño de sitios web es crear un sitio web que fortalezca la marca de su empresa al tiempo que garantiza la facilidad de uso y la simplicidad para su audiencia</p>
-    </article>
 </div>
 
 <div class="item-ofert">   
-    <article>
-        <img src="assets/img3.png" alt="foto1">
+        <img src="assets/img3.png" alt="foto1" class="img_ofert">
         <h2>Adaptable a diferentes dispositivos</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
-    </article>
 </div>
 
-<div class="item-ofert">   
-    <article>
-        <img src="assets/img3.png" alt="foto1">
-        <h2>Adaptable a diferentes dispositivos</h2>
+<div class="item-ofert">
+        <img src="assets/img2.png" alt="foto1" class="img_ofert">
+        <h2>Adimintracion y hosteo web</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
-    </article>
 </div>
 
-<div class="item-ofert">   
-    <article>
-        <img src="assets/img3.png" alt="foto1">
-        <h2>Adaptable a diferentes dispositivos</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
-    </article>
-</div>
-
-<div class="item-ofert">   
-    <article>
-        <img src="assets/img3.png" alt="foto1">
-        <h2>Adaptable a diferentes dispositivos</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, fugiat.</p>
-    </article>
 </div>
 
 </div>
