--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="img_biog"><img src="assets/img4.jpg" alt="Img_4"></div>
 <div class="info_soul">
     
-    <h2>Habilidades</h2>
+    <h1 data-aos="fade-right">Habilidades</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ullam consequuntur odit quo dolore voluptatum ducimus, dignissimos praesentium quia, quisquam asperiores corporis velit deserunt esse, porro ex autem corrupti rem.</p>
 
@@ -79,7 +79,6 @@
 <div class="habilid_02"> <p>Back-end</p> <p>70%</p> </div>
 <div class="habilid_03"> <p>ReactJs</p> <p>40%</p> </div>
 <div class="habilid_04"> <p>Angular</p> <p>60%</p> </div>
-
 
 </div>
 
@@ -96,17 +95,17 @@
 
     <div class="ofert_content">
 
+<div class="ofert_title">      
+    <hr data-aos="fade-left">        
     <h1 data-aos="zoom-in">Servicios</h1>
-    <hr data-aos="zoom-in">
+</div>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed aspernatur vel, dolorum quae modi praesentium ratione quidem ipsa rerum eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, doloremque?</p>
+    <div class="ofert_post">
+        <a id="back" class="back_img"><i class="fas fa-angle-left fa-xl"></i></a> 
 
 <div class="conteiner-post">   
-    
-    <div class="slider_ofert" id="slider_ofert">
 
-        <a id="back" class="back_img"><i class="fas fa-angle-left fa-xl"></i></a> 
-        <a id="next" class="next_img"><i class="fas fa-angle-right fa-xl"></i></a>
+    <div class="slider_ofert" id="slider_ofert">   
 
 <div class="item-ofert">
         <i class="fas fa-code"></i>
@@ -134,6 +133,9 @@
 </div>
 
     </div>
+  
+</div>
+<a id="next" class="next_img"><i class="fas fa-angle-right fa-xl"></i></a>
     </div>
     </div>
 </div>
