--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="styles.css" rel="stylesheet">
     <link href="normalize.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
 </head>
 <body>
 
@@ -93,52 +94,51 @@
 <section id="ofert_link">
 <div class="ofert">
 
-    <div class="ofert_content">
-
 <div class="ofert_title">      
     <hr data-aos="fade-left">        
     <h1 data-aos="zoom-in">Servicios</h1>
 </div>
 
-    <div class="ofert_post">
-        <a id="back" class="back_img"><i class="fas fa-angle-left fa-xl"></i></a> 
+<div class="ofert_content">    
 
-<div class="conteiner-post">   
+    <button aria-label="back" class="back"><i class="fas fa-angle-left fa-xl"></i></button>
 
-    <div class="slider_ofert" id="slider_ofert">   
+<div class="post_list">
 
-<div class="item-ofert">
+    <div class="item-ofert">
         <i class="fas fa-code"></i>
         <h2>Desarrollo Web</h2>
         <p>El proceso de desarrollo web implica tomar los elementos gráficos definidos en el proceso de diseño y codificarlos en un tema personalizado de Wordpress.</p>
-</div>
+    </div>
 
-<div class="item-ofert">
+    <div class="item-ofert">
         <i class="fas fa-palette"></i>
         <h2>Diseño de pagina web </h2>
         <p>Nuestro enfoque para el diseño de sitios web es crear un sitio web que fortalezca la marca de su empresa al tiempo que garantiza la facilidad de uso y la simplicidad para su audiencia</p>
-</div>
+    </div>
 
-<div class="item-ofert">   
+    <div class="item-ofert">   
     <i class="fas fa-laptop"></i>
         <h2>Adaptable a diferentes dispositivos</h2>
         <p>Tener un diseño receptivo significa que su sitio web cambia de tamaño de manera fluida para una visualización óptima, independientemente del tamaño de la pantalla o del dispositivo (por ejemplo, iPhone, iPad)</p>
 
-</div>
+    </div>
 
-<div class="item-ofert">
+    <div class="item-ofert">
         <i class="fas fa-network-wired"></i>
         <h2>Administracion y hosteo web</h2>
         <p>Ofrecemos capacitación personalizada de WordPress para garantizar que tenga confianza en la actualización y el mantenimiento de su sitio web de WordPress.</p>
+    </div>
 </div>
+
+    <button aria-label="next" class="next"><i class="fas fa-angle-right fa-xl"></i></button>
 
     </div>
   
+<div role="tablist" class="ofert_indicador"></div>
+
 </div>
-<a id="next" class="next_img"><i class="fas fa-angle-right fa-xl"></i></a>
     </div>
-    </div>
-</div>
 </section>
 <!--/Servicio-->
 
@@ -199,6 +199,7 @@
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/86c2c37b72.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
     <script>
         AOS.init({
             duration: 900
