--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
 
             <div class="post_slider">
-                <h2>Sigueme y Contactame1</h2> 
+                <h2>laalallallalalalal</h2> 
                 <i class="fas fa-thumbs-up"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur nobis odio obcaecati necessitatibus sed saepe qui similique nulla.</p>
             </div>
