--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="nav-bar" id="btnMenu"><i class="fas fa-bars fa-lg"></i> Menu</span>
         <ul class="menu" id="menu">
 
-            <li class="menu__logo"><p>KJS_N algorithm</p></li>
+            <li class="menu__logo"><p>KJS_N Code</p></li>
             <li class="menu__item"><a href="#banner" class="menu__link">Inicio<i class="fas fa-home"></i></a></li>
             <li class="menu__item"><a href="#biog_link" class="menu__link">Acerca de</a></li>
             <li class="menu__item"><a href="#ofert_link" class="menu__link">Servicios</a></li>
@@ -37,7 +37,7 @@
     <div class="content-bant">
     
     <div class="info">
-    <h1 data-aos="fade-right" data-aos-duration="2000"> KJS_N algorithm</h1> 
+    <h1 data-aos="fade-right" data-aos-duration="2000"> KJS_N Code</h1> 
     </div>
     
     <div class="info-text">        
@@ -246,7 +246,7 @@
         </div>
 
     <div class="copy">
-        <small>Copyright &copy; 2021 KJSN algorithm - Todos los derechos reservado.</small>
+        <small>Copyright &copy; 2021 KJS_N Code - Todos los derechos reservado.</small>
     </div>
 
 </div>
