--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="contact_content">  
         
         <h1 data-aos="fade-right">Contactame</h1>
-        
+
         <h3>¿Te interesa? comunicame enviando un mensaje</h3>
 
 <div class="post_contact">
@@ -179,7 +179,7 @@
             <div class="post_slider">
                 <h2>Ponerse en contacto</h2> 
                 <i class="fas fa-clock"></i>
-                <p>El horarioes de 9 am a 5 pm los días de semana horario en ciudad de mexico.</p>
+                <p>El horario es de 9 am a 5 pm los días de semana horario en ciudad de mexico.</p>
             </div>
 
             <div class="post_slider">
@@ -189,13 +189,7 @@
             </div>
 
             <div class="post_slider">
-                <h2>laalallallalalalal</h2> 
-                <i class="fas fa-thumbs-up"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur nobis odio obcaecati necessitatibus sed saepe qui similique nulla.</p>
-            </div>
-
-            <div class="post_slider">
-                <h2>Sigueme y Contactame2</h2> 
+                <h2>Con precios Bajos</h2> 
                 <i class="fas fa-thumbs-up"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur nobis odio obcaecati necessitatibus sed saepe qui similique nulla.</p>
             </div>
