--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     
     <nav  class="main-nav">
     <div class="content_menu">
-        <span class="nav-bar" id="btnMenu"><i class="fas fa-bars fa-lg"></i> Menu</span>
+        <span class="nav-bar" id="btnMenu"><i class="fas fa-bars fa-lg"></i></span>
         <ul class="menu" id="menu">
 
-            <li class="menu__logo"><p>Daftware Code</p></li>
+            <li class="menu__logo"><p>Kevin J. Sanchez</p></li>
             <li class="menu__item"><a href="#banner" class="menu__link">Inicio<i class="fas fa-home"></i></a></li>
             <li class="menu__item"><a href="#biog_link" class="menu__link">Acerca de</a></li>
             <li class="menu__item"><a href="#ofert_link" class="menu__link">Servicios</a></li>
             <li class="menu__item"><a href="#contact_link" class="menu__link">Contacto</a></li>
+            <li class="menu__buttom"><a href="https://github.com/KevinSanchez030329/Portafolio-Web"><i class="fab fa-github"></i></a></li>
         </ul>
     </div>
     </nav>
@@ -38,7 +39,7 @@
 
 <div class="content-bant">  
     <div class="info">
-    <h1 -data-aos="fade-right" data-aos-duration="2000"> Daftware <span class="title_line">_</span> Code</h1> 
+    <h1 -data-aos="fade-right" data-aos-duration="2000"> Kevin J. Sanchez</h1> 
     </div>
 
     <div class="info-text">        
@@ -111,8 +112,6 @@
     <h1 data-aos="zoom-in">Servicios</h1>
 </div>
 
-<h3>Los servicios que puedo hacer</h3>
-
 <div class="ofert_content">    
 
     <button aria-label="back" class="back"><i class="fas fa-angle-left fa-xl"></i></button>
@@ -145,9 +144,9 @@
     </div>
 
     <div class="item-ofert">
-        <i class="fas fa-database"></i>
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, consequuntur. Iure facilis labore iste deleniti. In cum porro voluptatum ipsum?</p>
+        <i class="fas fa-wrench"></i>
+        <h2>Solucion de Problemas</h2>
+        <p>Puedo apoyar a problemas a proyectos ya existentes </p>
     </div>
 </div>
 
@@ -254,10 +253,10 @@
 <div class="foot-content">
 
     <div class="foot-social">
-        <a href="https://github.com/KevinSanchez030329/Portafolio-Web" id="social-link_4" class="social_a"><i class="fab fa-github-square"></i></a>
         <a href="https://www.reddit.com/user/Kevin_Sanchez030329" id="social-link_3" class="social_a"><i class="fab fa-reddit-square"></i></a>
         <a href="#" id="social-link_2" class="social_a"><i class="fab fa-whatsapp-square"></i></a>
         <a href="#" id="social-link_1" class="social_a"><i class="fab fa-facebook-square"></i></a>
+        <a href="#" id="social-link_5" class="social_a"><i class="fab fa-twitter-square"></i></a>
         </div>
 
     <div class="copy">
