--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <h3>Mi nombre es Kevin Jael Sanchez Nuñez</h3>
     <p> 
-        Soy un programador junior que se especializa en Front-end y Back-end y entre otras areas que se dedica al desarrollo web. Me gusta los retos y seguir aprendiendo mas cosas nuevas, busco siempre las mejores opciones al momento de trabajar y brindar lo mejor al cliente. Soy responsable, formal y apacionado con la tecnologia.
+        Soy un programador independiente que se especializa en Front-end y Back-end y entre otras cosas de desarrollo web. Me gusta los retos y seguir aprendiendo cosas nuevas, busco siempre las mejores opciones al momento de trabajar y brindar lo mejor al cliente. Soy responsable, atento y apacionado con la tecnologia.
     </p>
 
     <div class="info_biog">
@@ -76,7 +76,7 @@
     <h1 data-aos="fade-right">Habilidades</h1>
 
     <p>
-        Me dedico lo que es Front-end, Back-end, diseño web y WordPress. Estoy mas especializado en Front-end y puedo ayudar a arreglar algun problema tecnico. Los lenguajes que tengo son HTML, CSS, JavaScript, PHP, MySQL, Python y me gusta seguir aprendiendo mas. 
+        Me dedico lo que es Front-end, Back-end y diseño web. Estoy mas especializado en Front-end y puedo ayudar a arreglar algun problema tecnico. Los lenguajes que tengo son HTML, CSS, JavaScript, PHP, MySQL, Python y me gusta seguir aprendiendo mas. 
     </p>
 
     <div class="habilid_info">
@@ -115,11 +115,6 @@
 
         <div class="habilid_static">  
             <div class="habilid_03"> <p>Diseño Web</p> <p class="habilid_posent">50%</p></div>
-            
-        </div> 
-
-        <div class="habilid_static">  
-            <div class="habilid_04"> <p>WordPress</p> <p class="habilid_posent">40%</p></div>
             
         </div> 
     </div>
@@ -169,12 +164,6 @@
         <i class="fas fa-palette"></i>
         <h2>Diseño Web </h2>
         <p>Puedo diseñar su pagina web para que sea amigable para el publico, facil de entender y usar y con el estilo propio que quiera demostrar. </p>
-    </div>
-
-    <div class="item-ofert">
-        <i class="fab fa-wordpress"></i>
-        <h2>WordPress</h2>
-        <p>Tambien puedo desarrollar su pagina web en WordPress para su negocio que quiera empezar hacer con todo el contenido que desea.</p>
     </div>
 
     <div class="item-ofert">
@@ -287,9 +276,9 @@
 <div class="foot-content">
 
     <div class="foot-social">
-        <a href="https://www.facebook.com/profile.php?id=100062710535632" id="social-link_1" class="social_a"><i class="fab fa-facebook-square"></i></a>
-        <a href="#" id="social-link_2" class="social_a"><i class="fab fa-whatsapp"></i></a>
-        <a href="#" id="social-link_3" class="social_a"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100062710535632" id="social_link_1" class="social_a"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://wa.me/5610635154" id="social_link_2" class="social_a"><i class="fab fa-whatsapp"></i></a>
+        <a id="social_link_3" class="social_a"><i class="fas fa-envelope"></i></a>
 
         </div>
 
