--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
         <div class="email_form"> 
             <h4>Enviar mensaje</h4>
             <form action="email.php" method="post">
-                <input type="text" name="asunto" placeholder="Nombre" required>
+                <input type="text" name="name" placeholder="Nombre" required>
                 <hr>
-                <input type="text" name="name" placeholder="Proyecto" required>
+                <input type="text" name="proyect" placeholder="Proyecto" required>
                 <hr>
                 <input type="text" name="email" placeholder="Correo / Whatsapp" required>
                 <hr>
