--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </div>
 
     <div class="copy">
-        <small>Copyright &copy; 2022 Tecnologia de Kevin J. Sanchez</small>
+        <small>Sitio web creado por &copy; Kevin J. Sanchez</small>
     </div>
 
 </div>
