--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!--header-->    
 <header id="main_nav"> 
-    
+
     <nav  class="main-nav">
     <div class="content_menu">
         <span class="nav-bar" id="btnMenu"><i class="fas fa-bars fa-lg"></i></span>
@@ -149,6 +149,7 @@
         
         <div class="proyect_prox">
             <h2>Proximamente</h2>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
         </div>
 
     </div> 
@@ -218,6 +219,8 @@
                 <a href="https://github.com/KevinSanchez030329/Minichat-demo"><i class="fab fa-github"></i>Github</a>
                 </div>
             </div>
+
+        </div>
 
         </div>
 
@@ -347,10 +350,10 @@
 
         <div class="email_form"> 
             <h4>Enviar mensaje</h4>
-            <form action="email.php" method="post">
+            <form action="PHP/email.php" method="post">
                 <input type="text" name="name" placeholder="Nombre" required>
                 <hr>
-                <input type="text" name="proyect" placeholder="Proyecto" required>
+                <input type="text" name="proyect" placeholder="Proyecto / Asunto" required>
                 <hr>
                 <input type="text" name="email" placeholder="Correo / Whatsapp" required>
                 <hr>
