--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             Me dedico lo que es Front-end, Back-end y diseño web. Estoy más especializado en Front-end y puedo ayudar a arreglar algún problema técnico. Los lenguajes que tengo son HTML, CSS, JavaScript, PHP, MySQL y me gusta seguir aprendiendo más.
         </p>
 
+    <br>
+    
+    <h3>Los siguientes porcentajes se basan según al enfoque que le doy a cada área y las tecnologías que se usan:</h3>
+
     <div class="habilid_info">
         
         <div class="habilid_static">   
