--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             
             <div class="info_demo_1">
                 <img src="assets/img2.jpg" alt="Foto 1">
-                <h3>Página de login (Demo)</h3>
+                <h3>Login (Demo)</h3>
                 <p>Solo es una página que solo sirve para iniciar sección sin ningún propósito aparente (solo de demostración)</p>
             </div>
 
@@ -194,7 +194,7 @@
                 <h3>Sobre de</h3>
                 <p>Esta página es solo es una muestra de como es un login diseñado por mí y las funciones que pueden tener</p>
                 <div class="buttom_port">
-                <a href=""><i class="fas fa-arrow-up-right-from-square"></i>Visitar</a>
+                <a href="https://kevinsanchez030329.github.io/Login-demo/"><i class="fas fa-arrow-up-right-from-square"></i>Visitar</a>
                 <a href="https://github.com/KevinSanchez030329/Login-demo"><i class="fab fa-github"></i>Github</a>
                 </div>
             </div>
